<resources>
    <string name="app_name">NewWeatherApp</string>
    <string name="places_api_key" translatable="false">AIzaSyCkfBarU6MCQRgncXXbXnT8j5Hix0ODsnA</string>
    <string name="search_city">Search</string>
    <string name="metric_unit">C</string>
    <string name="imperial_unit">F</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="needs_location">This app needs the Location permission, please accept to use location functionality</string>
    <string name="must_permit_location" translatable="false">Location Permission Needed</string>
    <string name="ok" translatable="false">OK</string>
    <string name="package_" translatable="false">package</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="degree">o</string>
    <string name="weather_app">Weather app</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="kmh" translatable="false">km/h</string>
    <string name="mh" translatable="false">m/h</string>
    <string name="feels_like">feels like</string>
    <string name="humidity">humidity</string>
    <string name="percent_tv">%</string>
    <string name="no_data">---</string>
    <string name="snow">Snow</string>
    <string name="rain">Rain</string>
    <string name="wind">Wind speed</string>
    <string name="add">Add to weather list</string>
    <string name="added" translatable="false">Added to weather list</string>
    <string name="saved">Saved</string>
    <string name="communicate">Communicate</string>
    <string name="locations">Locations:</string>
    <string name="todo">TODO</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
</resources>